Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Aimeelin的博客 by aimeelin</title>
+    <title>Aimeelin&#39;s blog by aimeelin</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Aimeelin的博客</h1>
-        <h2>脚踏实地，一步一个脚印定能成功</h2>
+        <h1>Aimeelin&#39;s blog</h1>
+        <h2>脚踏实地定能成功</h2>
         <a href="https://github.com/aimeelin" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
