Signed-off-by: aimeelin <980860932@qq.com>

--- a/pages2016011901.html
+++ b/pages2016011901.html
@@ -19,8 +19,8 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Aimeelin&#39;s blog</h1>
-        <h2>脚踏实地定能成功</h2>
+        <h1>我的文章</h1>
+        <h2>一个很酷的博客样式网站</h2>
         <a href="https://github.com/aimeelin" class="button"><small>Follow me on</small> GitHub</a>
       </div>
     </header>
@@ -29,24 +29,10 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="说说我" class="anchor" href="#%E8%AF%B4%E8%AF%B4%E6%88%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>说说我</h3>
+<a id="说说我" class="anchor" href="#%E8%AF%B4%E8%AF%B4%E6%88%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>一个很酷的博客样式网站</h3>
 
-<p>90后程序媛一枚，喜欢前端、英文、医药，闲来没事爱捣捣网页、做做翻译、看看药学......</p>
+<p>今天在网上闲逛，看到一个很酷的博客样式网站，里面好多风格，把网站记录下来，等有空上去琢磨琢磨：<a href="http://blogdesignheroes.com/" target="_blank">http://blogdesignheroes.com/ </a></p>
 
-<h3>
-<a id="我的文章" class="anchor" href="#%E6%88%91%E7%9A%84%E6%96%87%E7%AB%A0" aria-hidden="true"><span class="octicon octicon-link"></span></a>我的文章</h3>
-
-<ul>
-<li><a href="pages2016011901.html">一个很酷的博客样式网站</a></li>
-<li><a href="http://www.w3cfuns.com/notes/16004/0e669de785c9a420c4233dd604cb0b2a">Javascript:history.go()和history.back()的用法和区别</a></li>
-<li>
-<a href="http://www.w3cfuns.com/notes/16004/b87fbc113dbf7799e1ad7501733d3b5f">学习并实践了Swipe.js（移动WEB页面内容触摸滑动类库）</a> </li>
-</ul>
-
-<h3>
-<a id="联系我" class="anchor" href="#%E8%81%94%E7%B3%BB%E6%88%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>联系我</h3>
-
-<p>欢迎志同道合的朋友一起交流......</p>
         </section>
 
         <aside id="sidebar">
