Signed-off-by: aimeelin <980860932@qq.com>

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <ul>
 <li><a href="pages2016011901.html">一个很酷的博客样式网站</a></li>
-<li><a href="http://www.w3cfuns.com/notes/16004/0e669de785c9a420c4233dd604cb0b2a">Javascript:history.go()和history.back()的用法和区别</a></li>
+<li><a href="pages2016011902.html">Javascript:history.go()和history.back()的用法和区别</a></li>
 <li>
 <a href="http://www.w3cfuns.com/notes/16004/b87fbc113dbf7799e1ad7501733d3b5f">学习并实践了Swipe.js（移动WEB页面内容触摸滑动类库）</a> </li>
 </ul>
