Signed-off-by: aimeelin <980860932@qq.com>

--- a/pages2016011902.html
+++ b/pages2016011902.html
@@ -28,7 +28,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="说说我" class="anchor" href="#%E8%AF%B4%E8%AF%B4%E6%88%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>Javascript:history.go()和history.back()的用法和区别</h3>
+<a id="说说我" class="anchor" href="#%E8%AF%B4%E8%AF%B4%E6%88%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>Javascript:history.go()和history.back()的用法和区别--2016.01.19</h3>
 
 <p>简单的说就是：go(-1): 返回上一页，原页面表单中的内容会丢失；back(): 返回上一页，原页表表单中的内容会保留。</p>
 <p>history.go(-1):后退+刷新</p>
