--- a/pages2016011901.html
+++ b/pages2016011901.html
@@ -28,7 +28,7 @@
       <div class="inner clearfix">
         <section id="main-content">
           <h3>
-<a id="说说我" class="anchor" href="#%E8%AF%B4%E8%AF%B4%E6%88%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>一个很酷的博客样式网站</h3>
+<a id="说说我" class="anchor" href="#%E8%AF%B4%E8%AF%B4%E6%88%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>一个很酷的博客样式网站--2016.01.19</h3>
 
 <p>今天在网上闲逛，看到一个很酷的博客样式网站，里面好多风格，把网站记录下来，等有空上去琢磨琢磨：<a href="http://blogdesignheroes.com/" target="_blank">http://blogdesignheroes.com/</a></p>
 
