Signed-off-by: aimeelin <980860932@qq.com>

--- a/pages2016012001.html
+++ b/pages2016012001.html
@@ -32,6 +32,9 @@
 <p>很久之前就像自己搭建一个blog来玩玩，一直没信心去弄，就前两天逛贴的时候发现了一个贴（《如何由后台开发转向Web前端开发》<a href="http://www.zhihu.com/question/21338653">http://www.zhihu.com/question/21338653</a>）里面说的内容正合我意，便决心做一下。</p>
 <p>（1）首先上githup官网<a href="https://github.com/">https://github.com/</a>注册一个githup的账号，如下：</p>
 <p><img src="images/1.png"></p>
+<p>注册提交后githup会发封确认邮件到您邮箱，认证过后此账号就开通成功了。</p>
+<p>（2）在自己电脑本地安装git，在<a href="http://git-scm.com/download/win">http://git-scm.com/download/win</a>下载，我下载的是Git-2.7.0-64-bit.exe。点击并默认下一步安装即可，也可以参考<a href="http://blog.chinaunix.net/uid-25806493-id-3319781.html">《Win7上Git安装及配置过程》http://blog.chinaunix.net/uid-25806493-id-3319781.html</a>j进行配置。安装完后，在电脑空白处右击鼠标会出现githup的Git Gui（可视化界面）和Git Bash（命令行界面）。如：</p>
+<p><img src="images/2.png"></p>
 
         </section>
         <aside id="sidebar">
