--- a/pages2016012001.html
+++ b/pages2016012001.html
@@ -29,7 +29,7 @@
         <section id="main-content">
           <h3>
 <a id="说说我" class="anchor" href="#%E8%AF%B4%E8%AF%B4%E6%88%91" aria-hidden="true"><span class="octicon octicon-link"></span></a>谈谈我做github blog的一些事--2016.01.20</h3>
-<p>很久之前就像自己搭建一个blog来玩玩，一直没信心去弄，就前两天逛贴的时候发现了一个贴（《如何由后台开发转向Web前端开发》<a href="http://www.zhihu.com/question/21338653">http://www.zhihu.com/question/21338653</a>）里面说的内容正合我意，便决心做一下。</p>
+<p>很久之前就想自己搭建一个blog来玩玩，一直没信心去弄，就前两天逛贴的时候发现了一个贴（《如何由后台开发转向Web前端开发》<a href="http://www.zhihu.com/question/21338653">http://www.zhihu.com/question/21338653</a>）里面说的内容正合我意，便决心做一下。</p>
 <p>（1）首先上github官网<a href="https://github.com/">https://github.com/</a>注册一个github的账号，如下：</p>
 <p><img src="images/1.png"></p>
 <p>注册提交后github会发封确认邮件到您邮箱，认证过后此账号就开通成功了。</p>
