Signed-off-by: aimeelin <980860932@qq.com>

--- a/pages2016012001.html
+++ b/pages2016012001.html
@@ -31,7 +31,7 @@
 <p>很久之前就想自己搭建一个blog来玩玩，一直没信心去弄，就前两天逛贴的时候发现了一个贴（《如何由后台开发转向Web前端开发》<a href="http://www.zhihu.com/question/21338653">http://www.zhihu.com/question/21338653</a>）里面说的内容正合我意，便决心做一下。</p>
 <p>（1）首先上github官网<a href="https://github.com/">https://github.com/</a>注册一个github的账号，如下：</p>
 
-<p><img src="images/2.png"></p>
+<p style="text-align:center"><img src="images/2.png"></p>
 
         </section>
         <aside id="sidebar">
