--- a/pages2016012001.html
+++ b/pages2016012001.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-<div class="navbar navbar-inverse">
-  <div class="container" style="background:#428bca">
+<div class="navbar navbar-inverse" style="background:#428bca">
+  <div class="container" >
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
       <span style="font-size:20px;line-height:50px;padding-left:30px;color:#FF0"> Aimeelin's blog </span></div>
