--- a/works.html
+++ b/works.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<div class="navbar navbar-inverse" style="background:#428bca">
+<div class="navbar navbar-inverse mynav" >
   <div class="container" >
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
