Signed-off-by: aimeelin <980860932@qq.com>

--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
           <h3 class="panel-title">说说我</h3>
         </div>
         <div class="panel-body">
-          <p>90后程序媛一枚，毕业于南方医科大学医学信息工程专业</p>
-          <p>喜欢前端、英文、医药，闲来没事爱捣捣网页、做做翻译、看看药学......</p>
+          <p>90后程序媛一枚，毕业于南方医科大学医学信息工程专业。喜欢前端、英文、医药，闲来没事爱捣捣网页、做做翻译、看看药学......</p>
         </div>
       </div>
     </div>
-    <div class="col-md-4 col-lg-4 hidden-sm hidden-xs">
+    <div class="col-md-4 col-lg-4 hidden-sm hidden-xs" style="padding-bottom:30px">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="panel-title">联系我</h3>
@@ -85,8 +84,7 @@
           <h3 class="panel-title">说说我</h3>
         </div>
         <div class="panel-body">
-          <p>90后程序媛一枚，毕业于南方医科大学医学信息工程专业</p>
-          <p>喜欢前端、英文、医药，闲来没事爱捣捣网页、做做翻译、看看药学......</p>
+          <p>90后程序媛一枚，毕业于南方医科大学医学信息工程专业。喜欢前端、英文、医药，闲来没事爱捣捣网页、做做翻译、看看药学......</p>
         </div>
       </div>
     </div>
