--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Aimeelin's blog</title>
-<link rel="stylesheet" href="stylesheets/bootstrap.min.css"/>
+<link rel="stylesheet" href="stylesheets/bootstrap.css"/>
 <link rel="stylesheet" href="stylesheets/style.css"/>
 </head>
 
