--- a/pages2016012001.html
+++ b/pages2016012001.html
@@ -5,25 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Aimeelin's blog</title>
-<link rel="stylesheet" href="stylesheets/bootstrap.css"/>
+<link rel="stylesheet" href="stylesheets/bootstrap.min.css"/>
 <link rel="stylesheet" href="stylesheets/style.css"/>
 </head>
 
 <body>
-<div class="navbar navbar-inverse mynav" >
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-      <span style="font-size:20px;line-height:50px;padding-left:30px;color:#FF0"> Aimeelin's blog </span></div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav pull-right" >
-       <li><a href="index.html" style="color:#fff">首页</a></li>
-        <li><a href="index.html" style="color:#fff">说说我</a></li>
-        <li><a href="javascript:void(0)" style="color:#fff">我的博文</a></li>
-        <li><a href="works.html" style="color:#fff">我的作品</a></li>
-        <li><a href="index.html" style="color:#fff">联系我</a></li>
-      </ul>
-  </div>
-</div>
+
 <div class="container" style="padding-top:30px;padding-bottom:30px">
  <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
