--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li class="list-group-item"><a href="pages2016011902.html">Javascript:history.go()和history.back()的用法和区别--2016.01.19</a></li>
           <li class="list-group-item"> <a href="http://www.w3cfuns.com/notes/16004/b87fbc113dbf7799e1ad7501733d3b5f">学习并实践了Swipe.js（移动WEB页面内容触摸滑动类库）--2016.01.19</a> </li>
         </ul>
-        <div class="pull-right" style="padding-top:10px;padding-bottom:10px"><a href='#'>查看博文详情>></a></div>     
+        <div class="pull-right" style="padding-top:10px;padding-bottom:10px"><a href='works.html'>查看我的相关作品>></a></div>     
 	  </div>
     </div>
     <div class="col-md-4 col-lg-4 hidden-sm hidden-xs">
