--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </div>
 </div>
 <div class="container">
-  <div class="slider">
+  <!--<div class="slider">
     <div class="row" style="padding-top:10px">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div id="myCarousel" class="carousel slide">
@@ -33,17 +33,24 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
           </ol>
-          <!-- Carousel items -->
+          
           <div class="carousel-inner">
             <div class="active item"><a href="http://www.daqianduan.com/nav"><img src="images/hs-nav.jpg"></a></div>
             <div class="item"><a href="http://themebetter.com/theme/xiu"><img src="images/hs-xiu.jpg"></a></div>
           </div>
-          <!-- Carousel nav --> 
+          
           <a class="carousel-control left" href="#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span></a> <a class="carousel-control right" href="#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span></a> </div>
       </div>
     </div>
   </div>
-  <div class="row" style="margin-top:10px;">
+  -->
+  <div class="row" >
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+  <a href="http://www.daqianduan.com/nav" class="thumbnail"><img src="images/hs-nav.jpg" class="img-responsive"></a>
+  </div>
+  </div>
+  
+  <div class="row" >
     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12" >
       <div class="panel panel-default">
         <div class="panel-heading">
