Signed-off-by: aimeelin <980860932@qq.com>

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
     </div>
   </div>
   -->
+   <div class="row" >
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="padding-bottom:10px">
+  换肤：<a href="javascript:void(0)" style="color:#428bca" onclick="changeSkinBlue()" id="skin_blue">蓝色</a>&nbsp; &nbsp;<a href="javascript:void(0)" style="color:green" onclick="changeSkinGreen()" id="skin_green">绿色</a>&nbsp; &nbsp;<a href="javascript:void(0)" style="color:pink" onclick="changeSkinPink()" id="skin_pink">粉红</a>
+  </div>
+  </div>
   <div class="row" >
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
   <a href="http://www.daqianduan.com/nav" class="thumbnail"><img src="images/hs-nav.jpg" class="img-responsive"></a>
