Signed-off-by: aimeelin <980860932@qq.com>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="javascript:void(0)" style="color:#fff">首页</a></li>
         <li><a href="javascript:void(0)" style="color:#fff">说说我</a></li>
         <li><a href="javascript:void(0)" style="color:#fff">我的博文</a></li>
-        <li><a href="works.html" style="color:#fff">我的作品</a></li>
+        <li><a href="works.html" style="color:#fff" class="a-blog">我的作品</a></li>
         <li><a href="javascript:void(0)" style="color:#fff">联系我</a></li>
       </ul>
   </div>
@@ -62,12 +62,12 @@
           <div class="panel-title">我的博文</div>
         </div>
         <ul class="list-group" >
-          <li class="list-group-item"><a href="pages2016012001.html">谈谈我做github blog的一些事--2016.01.20</a></li>
-          <li class="list-group-item"><a href="pages2016011901.html">一个很酷的博客样式网站--2016.01.19</a></li>
-          <li class="list-group-item"><a href="pages2016011902.html">Javascript:history.go()和history.back()的用法和区别--2016.01.19</a></li>
+          <li class="list-group-item"><a href="pages2016012001.html"  class="a-blog">谈谈我做github blog的一些事--2016.01.20</a></li>
+          <li class="list-group-item"><a href="pages2016011901.html"  class="a-blog">一个很酷的博客样式网站--2016.01.19</a></li>
+          <li class="list-group-item"><a href="pages2016011902.html"  class="a-blog">Javascript:history.go()和history.back()的用法和区别--2016.01.19</a></li>
           <li class="list-group-item"> <a href="http://www.w3cfuns.com/notes/16004/b87fbc113dbf7799e1ad7501733d3b5f">学习并实践了Swipe.js（移动WEB页面内容触摸滑动类库）--2016.01.19</a> </li>
         </ul>
-        <div class="pull-right" style="padding-top:10px;padding-bottom:10px"><a href='works.html'>查看我的相关作品>></a></div>     
+        <div class="pull-right" style="padding-top:10px;padding-bottom:10px"><a href='works.html'  class="a-blog">查看我的相关作品>></a></div>     
 	  </div>
     </div>
     <div class="col-md-4 col-lg-4 hidden-sm hidden-xs">
