Signed-off-by: aimeelin <980860932@qq.com>

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         </div>
         <div class="panel-body">
           <p>欢迎志同道合的朋友一起交流......</p>
+          <p><a href="http://www.w3cfuns.com/house/16004/note">http://www.w3cfuns.com/house/16004/note</a></p>
         </div>
       </div>
     </div>
@@ -107,6 +108,7 @@
         </div>
         <div class="panel-body">
           <p>欢迎志同道合的朋友一起交流......</p>
+          <p><a href="http://www.w3cfuns.com/house/16004/note">http://www.w3cfuns.com/house/16004/note</a></p>
         </div>
       </div>
     </div>
